--- a/templates/f4fitness/trainer_dashboard.html
+++ b/templates/f4fitness/trainer_dashboard.html
@@ -119,7 +119,7 @@
         <a href="{% url 'trainer_profile' %}">My Profile</a>
         <a href="{% url 'trainer_plan' %}">Sessions</a>
         <a href="{% url 'trainer_clients' %}">Clients</a>
-        <a href="#">Reports</a>
+        <a href="{% url 'logout' %}">logout</a>
     </div>
 
     <div class="main-content">
