--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -11,7 +11,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #fefbfb;
-            background-image: url('{% static "img/blog/fit1.png" %}'); /* Add your background image URL here */
+            background-image: url('{% static "img/blog/gymroom.jpg" %}'); /* Add your background image URL here */
 
             background-size: cover;
             background-position: center;
@@ -22,7 +22,7 @@
             margin: 0;
         }
         .login-container {
-            background-color: rgb(93, 172, 237);
+            background-color: rgba(242, 195, 7, 0.86);
             padding: 20px;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -77,7 +77,7 @@
         {% if error_message %}
             <div class="error-message">{{ error_message }}</div>
         {% endif %}
-        <form action="" method="POST">
+        <form action="{% url 'admin_login' %}" method="POST">
             {% csrf_token %}
             <input type="text" name="username" placeholder="Username" required>
             <div class="password-container">
@@ -107,4 +107,4 @@
     </script>
 
 </body>
-</html>
+</html>  
