--- a/templates/f4fitness/index.html
+++ b/templates/f4fitness/index.html
@@ -74,6 +74,7 @@
                                     {% comment %} <li><a href="admin_login">ADMIN</a></li> {% endcomment %}
                                 
                                     <li><a href="trainer_login">TRAINER</a></li>
+                                    <li><a href="{% url  'admin_login' %}">Admin</a></li>
                                     <li><a href="{% url  'uplan' %}">REGISTRATION</a></li>
                                 </ul>
                             </nav>
