--- a/templates/f4fitness/login.html
+++ b/templates/f4fitness/login.html
@@ -9,7 +9,7 @@
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
-            background-image: url('{% static "img/blog/samurai.jpg" %}'); /* Add your background image URL here */
+            background-image: url('{% static "img/blog/userlogin.jpg" %}'); /* Add your background image URL here */
             background-size: cover;
             background-position: center;
             margin: 0;
