--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -10,7 +10,7 @@
                 <span>GymBot</span>
             </div>
             <div class="chatbox-content" id="chatbox-content">
-                <div class="message bot-message">Hello! How can I assist you with your gym progress today?</div>
+                <div class="message bot-message">Hello! {{user}} How can I assist you with your gym progress today?</div>
             </div>
             <input type="text" id="user-input" class="chatbox-input" placeholder="Type a message..." onkeydown="if(event.key === 'Enter'){sendMessage();}" />
         </div>
