--- a/templates/f4fitness/offline_usermangement.html
+++ b/templates/f4fitness/offline_usermangement.html
@@ -120,6 +120,7 @@
                     <th>PHONE</th>
                     <th>Actions</th>
                     <th>Trainer</th>
+                    <th>Attendence</th>
                     
                 </tr>
             </thead>
@@ -148,6 +149,9 @@
                         
 
 
+                    </td>
+                    <td>
+                        <a href="" class="btn">view attendence</a>
                     </td>
                 </tr>
                 {% empty %}
