--- a/templates/f4fitness/trainer_dashboard.html
+++ b/templates/f4fitness/trainer_dashboard.html
@@ -130,11 +130,11 @@
         <div class="cards">
             <div class="card">
                 <div class="title">Total Sessions</div>
-                <div class="value">58</div>
+                <div class="value">{{session_count}}</div>
             </div>
             <div class="card">
                 <div class="title">Total Clients</div>
-                <div class="value">24</div>
+                <div class="value">{{user_count}}</div>
             </div>
         </div>
 
