--- a/templates/f4fitness/user_dashboard.html
+++ b/templates/f4fitness/user_dashboard.html
@@ -126,8 +126,8 @@
         <div class="card">
             <div class="header-container">
                 <div class="profile-info">
-                    {% if user.profile.image %}
-                        <img src="{{ user.profile.image.url }}" alt="" class="profile-img">
+                    {% if user_data.image %}
+                        <img src="{{ user_data.image.url }}" alt="" class="profile-img">
                     {% else %}
                         <!-- Fallback image if none exists -->
                         <img src="" alt="" class="profile-img">
@@ -147,14 +147,14 @@
             </div>
             <p>Today is a great day to stay fit and healthy. Check your workout progress below.</p>
         </div>
-
+<!-- 
         <div class="card">
             <h3>Workout Progress</h3>
             <div class="progress-bar">
                 <div style="width: 70%;">70% Complete</div>
             </div>
             <p>You're doing great! Keep pushing toward your fitness goals.</p>
-        </div>
+        </div> -->
 
     {% else %}
         <div class="card">
