--- a/templates/f4fitness/offline_usermangement.html
+++ b/templates/f4fitness/offline_usermangement.html
@@ -151,7 +151,7 @@
 
                     </td>
                     <td>
-                        <a href="" class="btn">view attendence</a>
+                        <a href="{% url 'view_attendance' user.id %}" class="btn">View Attendance</a>
                     </td>
                 </tr>
                 {% empty %}
